envoy.yaml
# this is the gateway configuration
static_resources:
  listeners:
  - name: default
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_vhost
              domains: ["*"]
              routes:

              #
              # illustrates how one logical API can be serviced
              # by multiple backend services
              #
              # E.g.   /                   => http service     => /
              #        /foo                => http service     => /get
              #        /foo/bar            => http service     => /
              #        /foo/bar/baz        => http service     => / + THIS_IS:A_VALUE header
              #        /redis              => redis_service    => /
              #        /postgres           => postgres_service => /
              #        /rabbitmq/publish   => rabbitmq_service => /publish
              #        /rabbitmq/subscribe => rabbitmq_service => /subscribe
              #
              # each backend service is wrapped by an envoy, so connections
              # between the front-proxy and each backend are over HTTP2
              #

              # NB: most specific at the top

              - match:
                  prefix: "/foo/bar/baz"
                route:
                    cluster: http_service
                    prefix_rewrite: "/get"
                    request_headers_to_add:
                    - header:
                        key: THIS_IS
                        value: A_VALUE

              - match:
                  prefix: "/foo/bar"
                route:
                    cluster: http_service
                    prefix_rewrite: "/get"

              - match:
                  prefix: "/foo"
                route:
                    cluster: http_service
                    prefix_rewrite: "/get"

              - match:
                  prefix: "/rabbitmq"
                route:
                    cluster: rabbitmq_service
                    prefix_rewrite: "/"

              - match:
                  prefix: "/postgres"
                route:
                    cluster: postgres_service
                    prefix_rewrite: "/"

              - match:
                  prefix: "/redis"
                route:
                    cluster: redis_service
                    prefix_rewrite: "/"

              - match:
                  prefix: "/"
                route:
                    cluster: http_service
                    prefix_rewrite: "/"
          http_filters:
          - name: envoy.router
            config: {}

  clusters:

  - name: http_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: http_service
        port_value: 9080

  - name: redis_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: redis_service
        port_value: 9080

  - name: postgres_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: postgres_service
        port_value: 9080

  - name: rabbitmq_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: rabbitmq_service
        port_value: 9080

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
